--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@inertiajs/react": "^1.2.0",
         "@vitejs/plugin-react": "^4.3.2",
         "react": "^18.3.1",
-        "react-dom": "^18.3.1"
+        "react-dom": "^18.3.1",
+        "sweetalert2": "^11.14.3"
     }
 }
